--- a/roles/openvpn_client/tasks/openvpn_client_cfg.yml
+++ b/roles/openvpn_client/tasks/openvpn_client_cfg.yml
@@ -1,6 +1,8 @@
 ---
 - name: Add openvpnclient config
   template:
-    src: client.conf.j2
-    dest: "/etc/openvpn/client.conf"
+    src: "{{ item.src }}"
+    dest: "/{{ item.dest }}"
+  with_items:
+    - "/etc/openvpn/client.conf"
   notify: reload openvpnclient
