--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory = ./inventories/prod/vpn_clients.yml
-remote_user = test_task
-private_key_file = ./test_task
+remote_user = appuser
+private_key_file = ~/.ssh/appuser
 host_key_checking = False
 retry_files_enabled = False
 roles_path = ./roles
