--- a/roles/openvpn_client/tasks/openvpn_client_cfg.yml
+++ b/roles/openvpn_client/tasks/openvpn_client_cfg.yml
@@ -4,5 +4,5 @@
     src: "{{ item.src }}"
     dest: "/{{ item.dest }}"
   with_items:
-    - "/etc/openvpn/client.conf"
+    - "etc/openvpn/client.conf.j2"
   notify: reload openvpnclient
