--- a/roles/openvpn_client/tasks/openvpn_client_cfg.yml
+++ b/roles/openvpn_client/tasks/openvpn_client_cfg.yml
@@ -1,8 +1,6 @@
 ---
 - name: Add openvpnclient config
-  template:
-    src: "{{ item.src }}"
-    dest: "/{{ item.dest }}"
+  template: src="{{ item }}.j2" dest="/{{ item }}"
   with_items:
-    - "etc/openvpn/client.conf.j2"
+    - "etc/openvpn/client.conf"
   notify: reload openvpnclient
