--- a/roles/openvpn_client/tasks/install_openvpn_client.yml
+++ b/roles/openvpn_client/tasks/install_openvpn_client.yml
@@ -1,4 +1,7 @@
 ---
 
 - name: Install openVPN
-  apt: name=openvpn state=present
+  become: true
+  apt: name={{ item }} state=present
+  with_items:
+  - openvpn=2.3.10-1ubuntu2.1
