--- a/roles/openvpn_client/tasks/openvpn_client_cfg.yml
+++ b/roles/openvpn_client/tasks/openvpn_client_cfg.yml
@@ -5,3 +5,8 @@
   with_items:
     - "etc/openvpn/client.conf"
   notify: reload openvpnclient
+- name: Enable openvpn client
+  become: true
+  systemd:
+    name: openvpn
+    enabled: true
