--- a/roles/openvpn_client/handlers/main.yml
+++ b/roles/openvpn_client/handlers/main.yml
@@ -1,7 +1,4 @@
 ---
 - name: reload openvpnclient
   service: name=openvpn state=restarted
-- name: Openvpn client status
-  service_facts: 
-- debug:
-    var: ansible_facts.services['openvpn']
+  check_mode: yes
