--- a/site.yml
+++ b/site.yml
@@ -1,3 +1,4 @@
 ---
 - import_playbook: base.yml
 - import_playbook: openvpn_client_run.yml
+when: ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'xenial'
