--- a/roles/openvpn_client/handlers/main.yml
+++ b/roles/openvpn_client/handlers/main.yml
@@ -2,3 +2,11 @@
 - name: reload openvpnclient
   service: name=openvpn state=restarted
   check_mode: yes
+  
+- name: enable openvpn service
+  become: true
+  systemd:
+    name: openvpn
+    enabled: true
+  check_mode: yes
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'xenial'
