--- a/roles/openvpn_client/tasks/openvpn_keys_deploy.yml
+++ b/roles/openvpn_client/tasks/openvpn_keys_deploy.yml
@@ -6,4 +6,5 @@
     owner: root
     group: root
     mode: 0600
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'xenial'
 
