--- a/roles/openvpn_client/tasks/install_openvpn_client.yml
+++ b/roles/openvpn_client/tasks/install_openvpn_client.yml
@@ -6,5 +6,5 @@
   with_items:
   - openvpn=2.3.10-1ubuntu2.1
   check_mode: yes
-  when: ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'xenial'
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version  == '16.04'
   notify: enable openvpn service
