--- a/base.yml
+++ b/base.yml
@@ -6,9 +6,5 @@
 
   tasks:
     - name: Install python for Ansible
-      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal python-apt)
       changed_when: False
-    - name: Install python-apt
-      apt: 
-        name: python-apt
-        state: present
