--- a/base.yml
+++ b/base.yml
@@ -2,9 +2,14 @@
 - name: Check && install python
   hosts: all
   become: true
-  gather_facts: False
+  gather_facts: true
 
   tasks:
     - name: Install python for Ansible
-      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal python-apt)
+      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
       changed_when: False
+    - name: Install python-apt
+      apt: 
+        name: python-apt
+        state: present
+      when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version  == '16.04'
