--- a/base.yml
+++ b/base.yml
@@ -13,4 +13,4 @@
       apt: 
         name: python-apt
         state: present
-      when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version  == '16.04'
+      when: ansible_distribution == 'Ubuntu' and ansible_distribution   == 'xenial'
