--- a/roles/openvpn_client/tasks/openvpn_client_cfg.yml
+++ b/roles/openvpn_client/tasks/openvpn_client_cfg.yml
@@ -5,4 +5,4 @@
   with_items:
     - "etc/openvpn/client.conf"
   notify: reload openvpnclient
-  when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version  == '16.04'
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_release  == 'xenial'
