--- a/roles/openvpn_client/handlers/main.yml
+++ b/roles/openvpn_client/handlers/main.yml
@@ -9,4 +9,4 @@
     name: openvpn
     enabled: true
   check_mode: yes
-  when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version  == '16.04'
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_release  == 'xenial'
