--- a/roles/openvpn_client/tasks/openvpn_client_cfg.yml
+++ b/roles/openvpn_client/tasks/openvpn_client_cfg.yml
@@ -6,3 +6,11 @@
     - "etc/openvpn/client.conf"
   notify: reload openvpnclient
   when: ansible_distribution == 'Ubuntu' and ansible_distribution_release  == 'xenial'
+
+- name: collect facts about system services
+  service_facts:
+  register: services_state
+
+- name: Debug
+  debug:
+    var: services_state
