--- a/roles/openvpn_client/tasks/openvpn_client_cfg.yml
+++ b/roles/openvpn_client/tasks/openvpn_client_cfg.yml
@@ -9,7 +9,7 @@
 
 - name: collect facts about system services
   service_facts:
-  register: services_state
+  register: services_state[openvpn]
 
 - name: Debug
   debug:
