--- a/roles/openvpn_client/tasks/openvpn_client_cfg.yml
+++ b/roles/openvpn_client/tasks/openvpn_client_cfg.yml
@@ -4,5 +4,4 @@
   template: src="{{ item }}.j2" dest="/{{ item }}"
   with_items:
     - "etc/openvpn/client.conf"
-  notify: reload puma
-  
+  notify: reload openvpn
