--- a/roles/openvpn_client/tasks/openvpn_client_cfg.yml
+++ b/roles/openvpn_client/tasks/openvpn_client_cfg.yml
@@ -4,4 +4,7 @@
   template: src="{{ item }}.j2" dest="/{{ item }}"
   with_items:
     - "etc/openvpn/client.conf"
-  notify: reload openvpn
+  notify: 
+    - reload openvpn
+    - collect facts about system services
+    - Debug
