--- a/roles/openvpn_client/handlers/enable_openvpn.yml
+++ b/roles/openvpn_client/handlers/enable_openvpn.yml
@@ -5,3 +5,4 @@
     name: openvpn
     enabled: true
   when: ansible_distribution == 'Ubuntu' and ansible_distribution_release  == 'xenial'
+  debug: msg="openvpn added to autostart"
