--- a/roles/openvpn_client/handlers/restart_openvpn.yml
+++ b/roles/openvpn_client/handlers/restart_openvpn.yml
@@ -2,3 +2,13 @@
 - name: reload openvpn
   become: yes
   systemd: name=openvpn state=restarted
+
+- name: collect facts about system services
+  service_facts:
+  register: services_state
+  listen: reload openvpn 
+
+- name: Debug
+  debug:
+    var: ansible_facts.services['openvpn']
+  listen: collect facts about system services
