--- a/roles/openvpn_client/tasks/openvpn_keys_deploy.yml
+++ b/roles/openvpn_client/tasks/openvpn_keys_deploy.yml
@@ -6,5 +6,6 @@
     owner: root
     group: root
     mode: 0600
+  notify: reload openvpn
   #when: ansible_distribution == 'Ubuntu' and ansible_distribution_release  == 'xenial'
 
