--- a/base.yml
+++ b/base.yml
@@ -2,10 +2,9 @@
 - name: Check && install python
   hosts: all
   become: true
-  gather_facts: true
+  gather_facts: false
 
   tasks:
-    - debug: msg="OS ver is {{ ansible_distribution }} {{ ansible_distribution_release }}"
     - name: Install python for Ansible
       raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
       changed_when: False
@@ -13,4 +12,3 @@
       apt: 
         name: python-apt
         state: present
-      when: ansible_distribution == 'Ubuntu' and ansible_distribution_release  == 'xenial'
