--- a/roles/openvpn_client/tasks/main.yml
+++ b/roles/openvpn_client/tasks/main.yml
@@ -3,3 +3,4 @@
 - include: install_openvpn_client.yml
 - include: openvpn_keys_deploy.yml
 - include: openvpn_client_cfg.yml
+- include: openvpn_client_reload.yml
