--- a/roles/openvpn_client/defaults/main.yml
+++ b/roles/openvpn_client/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 # defaults file for openvpn_client
 openvpn_client_etc_dir: /etc/openvpn
+openvpn_client_key_arch_base_name: keys
+openvpn_client_pers_keys: true
 openvpn_client_protocol: udp
 openvpn_client_server_host: 35.210.90.82
 openvpn_client_server_port: 2195
