--- a/roles/openvpn_client/tasks/openvpn_client_cfg.yml
+++ b/roles/openvpn_client/tasks/openvpn_client_cfg.yml
@@ -1,11 +1,7 @@
 ---
 - name: Add openvpnclient config
   become: true
-  template: src="{{ item }}.j2" dest="/{{ item }}"
+  template: 'src="{{ item }}.j2" dest="/{{ item }}"'
   with_items:
     - "etc/openvpn/client.conf"
-  notify: 
-  - reload openvpn
-  - collect facts about system services
-  - Debug
-    
+  register: openvpn_client_config
