--- a/roles/openvpn_client/tasks/openvpn_keys_deploy.yml
+++ b/roles/openvpn_client/tasks/openvpn_keys_deploy.yml
@@ -1,11 +1,23 @@
-- name: Extract config and keys
+- name: Extract config and keys for each host
   become: true
   unarchive: 
-    src: "{{ inventory_hostname }}.tar.gz"
+    src: "{{ openvpn_client_key_arch_base_name }}{{ play_hosts.index(inventory_hostname)+1 }}.tar.gz"
     dest: "{{ openvpn_client_etc_dir }}"
     owner: root
     group: root
     mode: 0600
-  notify: reload openvpn
-  #when: ansible_distribution == 'Ubuntu' and ansible_distribution_release  == 'xenial'
+  register: openvpn_keys_extracted
+  when: openvpn_client_pers_keys  == true
+
+- name: Extract config and keys for all hosts
+  become: true
+  unarchive:
+    src: "{{ openvpn_client_key_arch_base_name }}.tar.gz"
+    dest: "{{ openvpn_client_etc_dir }}"
+    owner: root
+    group: root
+    mode: 0600
+  when:  openvpn_client_pers_keys == false
+  register: openvpn_keys_extracted
+
 
