Измен таск установки опенвпн клиента и хендлер статуса впн клиента

--- a/roles/openvpn_client/handlers/openvpn_client_status.yml
+++ b/roles/openvpn_client/handlers/openvpn_client_status.yml
@@ -7,3 +7,6 @@
   debug:
     var: ansible_facts.services['openvpn']
 
+- name: openvpn_client_is_enabled
+  debug: "msg='OpenVPN Client added to autostart'"
+
