--- a/roles/openvpn_client/tasks/openvpn_client_reload.yml
+++ b/roles/openvpn_client/tasks/openvpn_client_reload.yml
@@ -3,6 +3,7 @@
   become: yes
   service: name=openvpn state=restarted enabled=yes
   register: openvpn_clien_reload
-  notify: 
+  notify:
     - OpenVPNClien_Status
+    - Debug
   when: openvpn_client_config.changed or openvpn_keys_extracted.changed
