--- a/roles/openvpn_client/handlers/restart_openvpn.yml
+++ b/roles/openvpn_client/handlers/restart_openvpn.yml
@@ -7,9 +7,9 @@
 - name: collect facts about system services
   service_facts:
   register: services_state
-  listen: reload openvpn 
+  listen: reload_openvpn 
 
 - name: Debug
   debug:
     var: ansible_facts.services['openvpn']
-  listen: collect facts about system services
+  listen: reload_openvpn
