--- a/roles/openvpn_client/tasks/install_openvpn_client.yml
+++ b/roles/openvpn_client/tasks/install_openvpn_client.yml
@@ -8,4 +8,4 @@
     - enable_openvpn_service
 
 - name: Print out the group_names
-  debug: msg="{{ hostvars.group_names[] }}"
+  debug: msg="{{ hostvars[inventory_hostname].group_names[] }}"
