--- a/roles/openvpn_client/handlers/restart_openvpn.yml
+++ b/roles/openvpn_client/handlers/restart_openvpn.yml
@@ -12,5 +12,5 @@
 
 - name: Debug
   debug:
-    var: ansible_facts.services['openvpn']
+    var: ansible_facts.services['openvpn@client.service']
   listen: reload_openvpn
